2002-08-20  Yoann Vandoorselaere  <yoann@mandrakesoft.com>

	* src/log-common.c (format_syslog_header): 
	return -1 if buf is NULL.
	
	(log_container_new): some of the argument might be NULL.
	(log_container_delete): ditto.

	* configure.in: require autoconf >= 2.53.

2002-08-16  Yoann Vandoorselaere  <yoann@mandrakesoft.com>

	* src/file-server.c (file_server_wake_up): cleanup.
	(logfile_alert): new function.
	(process_logfile): new function.

	(is_file_already_used): check the logfile hard link count, emit an
	alert if we reach 0.
	
	(check_modification_time): emit an alert if modification time got
	modified, but file size didn't increase.

	* src/lml-alert.c (lml_emit_alert): 
	there might be no log entry.

	* plugins/simple/simple.c (emit_alert): 
	coding style fix.

	* src/file-server.c: last_size is off_t, not time_t.
	new last_mtime member.
	
	(file_server_monitor_file): dup the filename before
	checking if opening the file suceeded, so that reopening
	inactive file work again.

2002-07-30  Yoann Vandoorselaere  <yoann@mandrakesoft.com>

	* configure.in: update version number to 0.8.0.

2002-07-29  Yoann Vandoorselaere  <yoann@mandrakesoft.com>

	Thanks to DINH Viet Hoa <dinh.viet.hoa@free.fr>, 
	for reporting all theses problem:
	
	* src/include/queue.h: 
	rename queue_t to lml_queue_t to avoid namespace
	conflict.

	* src/file-server.c (read_logfile): 
	clearerr_unlocked is not standard. Use clearerr.

	* src/log-common.c: include string.h.

	
	* src/regex.c (trim): 
	* src/log-common.c (format_syslog_header): 
	cast to int when calling isalnum and isspace.

	
2002-07-11  Yoann Vandoorselaere  <yoann@prelude-ids.org>

	* plugins/debug/debug.c (set_debug_state): 
	(set_output): fix the latest prelude getopt API
	change.

2002-06-27  Yoann Vandoorselaere  <yoann@mandrakesoft.com>

	* fit latest prelude-getopt API change.

2002-06-26  Yoann Vandoorselaere  <yoann@mandrakesoft.com>

	* plugins/simple/simple.c (read_multiline): 