@@ -195,7 +195,8 @@ static void logfile_alert(monitor_fd_t *fd, struct stat *st,
 
         inode->number = st->st_ino;
         strncpy(buf, fd->file, sizeof(buf));
-        
+        buf[sizeof (buf) - 1] = 0;
+
         ptr = strrchr(buf, '/');
         if ( ptr ) {
                 *ptr = '\0';
